--- a/css/style.css
+++ b/css/style.css
@@ -212,6 +212,9 @@ footer {
 		width: 200px;
 		height: 50px;
 	}
+	.bottom-container-get-started-button a {
+		font-size: 1rem;
+	}
 	.big-heading {
 		font-size: 2.5rem;
 	}
