botttom-button-change

--- a/css/style.css
+++ b/css/style.css
@@ -213,7 +213,7 @@ footer {
 		height: 50px;
 	}
 	.bottom-container-get-started-button a {
-		font-size: 0.8rem;
+		font-size: 10px;
 	}
 	.big-heading {
 		font-size: 2.5rem;
